# SyncBots-DeepAgents

./: .gitignore  README.md  pyproject.toml
.github/workflows/: llvm-upgrade.yml
examples/: caller-workflow-buddy-mlir.yml
syncbots/: README.md  __init__.py  __main__.py  bench.py  cli.py  config.py  digest.py  llm.py  memory.py  paths.py  prescan.py  repo_config.py  scan.py  state.py
syncbots/agent/: __init__.py  builder.py  prompts.py  schema.py  structured.py  subagents.py  trace.py
syncbots/loop/: __init__.py  controller.py  verifier.py
syncbots/repos/: buddy-mlir.yml  circt.yml  iree.yml  stablehlo.yml  torch-mlir.yml  triton.yml
syncbots/skills/cmake-error-fix/: SKILL.md
syncbots/skills/code-search/: SKILL.md
syncbots/skills/compile-error-fix/: SKILL.md
syncbots/skills/linker-error-fix/: SKILL.md
syncbots/skills/tablegen-error-fix/: SKILL.md
syncbots/skills/test-failure-fix/: SKILL.md
syncbots/skills/unknown-error-triage/: SKILL.md
syncbots/tests/: __init__.py  test_bench.py  test_buddy_llvm.py  test_bump_llvm.py  test_controller.py  test_memory.py  test_model_tiers.py  test_prepare.py  test_prescan.py  test_segments.py  test_structured.py  test_trace.py  test_verifier.py
syncbots/tools/: __init__.py  git_tools.py  llvm_tools.py
