[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "syncbots-deep"
version = "0.1.0"
description = "Deep-agent based LLVM/MLIR automatic upgrade tool (loop engineering + deepagents)"
requires-python = ">=3.10"
dependencies = [
    "deepagents>=0.6",
    "langgraph>=1.0",
    "langchain>=1.0",
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.3",
    "langchain-core>=0.3",
    "pydantic>=2.0",
    "requests>=2.31",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
syncbots = "syncbots.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["syncbots*"]

[tool.setuptools.package-data]
syncbots = ["repos/*.yml", "skills/*/SKILL.md"]
